--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>これは見出しらしい</h1>
         <div>
             <h2>cssの練習</h2>
+            css : Cascading Style Sheets
         </div>
     </body>
 </html>
