--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <div>
             <h2>cssの練習</h2>
             css : Cascading Style Sheets
+            <ul>
+                <li>css 1</li>
+                <li>css 2</li>
+                <li>css 3</li>
+            </ul>
         </div>
     </body>
 </html>
