--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
 
     <body>
-        <h1>これは見出しらしい</h1>
+        <div>
+            <h6>全ての入口</h6>
+            <img src="images/door-1.png" alt="Door!">
+        </div>
         <div>
             <h2>cssの練習</h2>
             css : Cascading Style Sheets
