--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8">
         <title>My Web Site!</title>
+        <!-- css -->
+        <link href="styles/style1.css" rel="stylesheet" type="text/css" >
     </head>
 
     <body>
@@ -15,7 +17,7 @@
             <h2>cssの練習</h2>
             css : Cascading Style Sheets
             <ul>
-                <li>css 1</li>
+                <li>css 1 :　スタイルシート言語</li>
                 <li>css 2</li>
                 <li>css 3</li>
             </ul>
