--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div>
             <h2>cssの練習</h2>
-            css : Cascading Style Sheets
+            <p>css : Cascading Style Sheets</p>
             <ul>
                 <li>css 1 :　スタイルシート言語</li>
                 <li>css 2</li>
