--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>My Web Site!</title>
         <!-- css -->
-        <link href="styles/style1.css" rel="stylesheet" type="text/css" >
+        <link href="css/style1.css" rel="stylesheet" type="text/css" >
     </head>
 
     <body>
