--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h6>全ての入口</h6>
             <img src="images/door-1.png" alt="Door!">
         </div>
-        <div>
+        <div class="my-class-1">
             <h2>cssの練習</h2>
             <p>css : Cascading Style Sheets</p>
             <ul>
