--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>My Web Site!</title>
         <!-- css -->
         <link href="css/style1.css" rel="stylesheet" type="text/css" >
+        <link href="css/body-style-1.css" rel="stylesheet" type="text/css" >
     </head>
 
     <body>
