--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 
     <body>
         <div>
-            <h6>全ての入口</h6>
+            <h6>全ての入口 a.k.a 真理の扉</h6>
             <img src="images/door-1.png" alt="Door!">
+        </div>
+        <div>
+            <h1>目次</h1>
+            <ul>
+                <li><a href="docs/theFirstPage.html">これが最初の一ページ</a></li>
+            </ul>
         </div>
         <div class="my-class-1">
             <h2>cssの練習</h2>
