--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <div>
+        <div class="my-class-2">
             <h6>全ての入口 a.k.a 真理の扉</h6>
             <img src="images/door-1.png" alt="Door!">
         </div>
