--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <head>
         <meta charset="utf-8">
         <title>My Web Site!</title>
+        <!-- SEO Search Engine Optimization -->
+        <meta name="description" content="
+        This site provides imformation about HTML,HTML/2.0,HTML5 and CSS.
+        ">
+        <meta property="og:image" content="https://hal-xd.github.io/MyWebSite/images/door-1.png">
+        <meta property="og:description" content="This site provides TRUTH for you.">
+        <meta property="og:title" content="THE DOOR OF TRUTH"
         <!-- css -->
         <link href="css/style1.css" rel="stylesheet" type="text/css" >
         <link href="css/body-style-1.css" rel="stylesheet" type="text/css" >
@@ -18,6 +25,7 @@
             <h1>目次</h1>
             <ul>
                 <li><a href="docs/theFirstPage.html">これが最初の一ページ</a></li>
+                <li><a href="docs/forHtmlPractice.html">htmlの練習用</a></li>
             </ul>
         </div>
         <div class="my-class-1">
