--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         ">
         <meta property="og:image" content="https://hal-xd.github.io/MyWebSite/images/door-1.png">
         <meta property="og:description" content="This site provides TRUTH for you.">
-        <meta property="og:title" content="THE DOOR OF TRUTH"
+        <meta property="og:title" content="THE DOOR OF TRUTH">
         <!-- css -->
         <link href="css/style1.css" rel="stylesheet" type="text/css" >
         <link href="css/body-style-1.css" rel="stylesheet" type="text/css" >
