create new page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ja">
     <head>
         <meta charset="utf-8">
         <title>My Web Site!</title>
@@ -11,7 +11,7 @@
         <meta property="og:image" content="https://hal-xd.github.io/MyWebSite/images/door-1.png">
         <meta property="og:description" content="This site provides TRUTH for you.">
         <meta property="og:title" content="THE DOOR OF TRUTH">
-        <!-- favorites icon -->
+        <!-- favorites icon ,or favicon-->
         <link rel="shrtcut icon" href="images/door-1.png" type="image/x-icon">
         <!-- css -->
         <link href="css/style1.css" rel="stylesheet" type="text/css" >
@@ -28,15 +28,6 @@
             <ul>
                 <li><a href="docs/theFirstPage.html">これが最初の一ページ</a></li>
                 <li><a href="docs/forHtmlPractice.html">htmlの練習用</a></li>
-            </ul>
-        </div>
-        <div class="my-class-1">
-            <h2>cssの練習</h2>
-            <p>css : Cascading Style Sheets</p>
-            <ul>
-                <li>css 1 :　スタイルシート言語</li>
-                <li>css 2</li>
-                <li>css 3</li>
             </ul>
         </div>
     </body>
